fixed z-index on menu

--- a/css/index.css
+++ b/css/index.css
@@ -403,6 +403,7 @@ body {
   position: fixed;
   background-color: #97a5b6;
   height: 50px;
+  z-index: 1;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
