--- a/less/Nav/Nav.less
+++ b/less/Nav/Nav.less
@@ -3,7 +3,7 @@
     position: fixed;
     background-color: @lambda-color-home-bg;
     height: 50px;
-   
+    z-index: 1;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
